tests/paczka1/small_fuzzy/16807417.err
Error in line 2: SgARmM A455 48,2
Error in line 7: NOcLD3Yil A455 11,5
